--- a/src/view/templates/mypage.html
+++ b/src/view/templates/mypage.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Hello, {{name}}</h1>
-    <p>This is your MyPage.</p>
+    <p>This is your MyPage. userId: {{userId}}</p>
   </body>
 </html>
