--- a/src/view/templates/mypage.html
+++ b/src/view/templates/mypage.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Page</title>
   </head>
   <body>
-    <h1>Hello, {{name}}</h1>
-    <p>This is your MyPage. userId: {{userId}}</p>
+    <header style="height: 50px; display: flex; justify-content: center;">
+      <div style="padding: 0 16px; width: 100%; max-width: 800px; display: flex; align-items: center;">
+        <div style="font-weight: 700; font-size: 16pt">
+          ◯×商店
+        </div>
+        <div style="flex-grow: 1;">
+        </div>
+        <a style="text-decoration: none;">
+          ログアウト
+        </a>
+      </div>
+    </header>
+
+    <main style="display: flex; justify-content: center;">
+      <div style="padding: 0 16px; width: 100%; max-width: 800px;">
+        <h1>{{name}}様、お帰りなさい</h1>
+        <h2>カートの中身</h2>
+        {{#each cartItems}}
+        {{else}}
+        <div style="padding: 1em 0; color: #888;">
+          カートの中身は空です
+        </div>
+        {{/each}}
+      </div>
+    </main>
   </body>
 </html>
