added client registration

--- a/src/view/templates/mypage.html
+++ b/src/view/templates/mypage.html
@@ -12,7 +12,7 @@
         </div>
         <div style="flex-grow: 1;">
         </div>
-        <a style="text-decoration: none;">
+        <a style="text-decoration: none; color: black;" href="/logout">
           ログアウト
         </a>
       </div>
