--- a/src/view/templates/login.html
+++ b/src/view/templates/login.html
@@ -5,8 +5,18 @@
     <title>ログイン</title>
   </head>
   <body style="margin: 0;">
-    <main style="height: 100vh; display: flex; align-items: center; justify-content: center; padding: 0 16px;">
-      <div style="width: 450px; box-shadow: 4px 4px 12px #bbb; border-radius: 8px; padding: 16px;">
+    <header style="height: 50px; display: flex; justify-content: center;">
+      <div style="padding: 0 16px; width: 100%; max-width: 800px; display: flex; align-items: center;">
+        <div style="font-weight: 700; font-size: 16pt">
+          ◯×商店
+        </div>
+        <div style="flex-grow: 1;">
+        </div>
+      </div>
+    </header>
+
+    <main style="height: calc(80vh - 50px); display: flex; align-items: center; justify-content: center; padding: 0 16px;">
+      <div style="width: 450px; padding: 16px;">
         <h1>ログイン</h1>
         <form
           method="post"
@@ -29,10 +39,17 @@
               required/>
           </div>
           <button
-            style="padding: 4px; border-radius: 4px; cursor: pointer;">
+            style="display: inline-block; background-color: #333; color: white; cursor: pointer; border: none; border-radius: 4px; padding: 8px 32px;">
             ログイン
           </button>
         </form>
+
+        {{#if wrongCredentials}}
+        <div
+          style="margin-top: 16px; padding: 8px; background-color: #ffc9c9; border: 1px solid #C10007; border-radius: 4px; font-size: 10pt; color: #82181a;">
+          ログインID・パスワードが誤っています。
+        </div>
+        {{/if}}
       </div>
     </main>
   </body>
