--- a/src/view/templates/authorize.html
+++ b/src/view/templates/authorize.html
@@ -24,9 +24,9 @@
         <h2>「{{clientName}}」が下記へのアクセスを求めています。</h2>
         <div>
           <ul>
-            <li>AAA</li>
-            <li>BBB</li>
-            <li>CCC</li>
+            <li>アカウントの基本情報（アカウント名）</li>
+            <li>カートの中身の閲覧</li>
+            <li>カートへの商品の追加</li>
           </ul>
         </div>
 
