--- a/src/view/templates/mypage.html
+++ b/src/view/templates/mypage.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My Page</title>
+    <link rel="icon" href="/favicon.png"/>
+    <title>マイページ</title>
   </head>
   <body>
     <header style="height: 50px; display: flex; justify-content: center;">
