--- a/src/view/templates/authorize.html
+++ b/src/view/templates/authorize.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="/favicon.png"/>
     <title>アプリのアクセス許可</title>
   </head>
   <body>
